--- a/toly_test/src/main/res/drawable/icon_close.xml
+++ b/toly_test/src/main/res/drawable/icon_close.xml
@@ -5,5 +5,7 @@
         android:viewportWidth="1024"
         android:viewportHeight="1024">
     <path
-        android:fillColor="#FF7F47"
+        android:strokeColor="@color/black"
+        android:strokeWidth="10"
+        android:name="trim_path"
 android:pathData="M548.992 503.744L885.44 167.328a31.968 31.968 0 1 0-45.248-45.248L503.744 458.496 167.328 122.08a31.968 31.968 0 1 0-45.248 45.248l336.416 336.416L122.08 840.16a31.968 31.968 0 1 0 45.248 45.248l336.416-336.416L840.16 885.44a31.968 31.968 0 1 0 45.248-45.248L548.992 503.744z" /></vector>
